--- a/index.html
+++ b/index.html
@@ -3,12 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Learn js</title>
+    <style>
+    	.lvl {
+    		margin: 10px 5px;
+    		height: 25px;
+    		width: 40px;
+    		background: #0000FF;
+    		color: white;
+    		text-align: center;
+    		padding-top:15px;
+    		display: flex;
+    	}
+    	#score {
+    		font-weight: 700;
+    		font-size: 20px;
+    	}
+    	#allLvl {
+    		display: flex;
+    		flex-wrap: wrap;
+    	}
+    	#content {
+    		display: flex;
+    		flex-direction: row;
+    	}
+    </style>
 </head>
 <body>
-    <canvas id="cnv" width="800px" height="800px"
-            style="border:1px solid #000000;">
-    </canvas>
-    
+	<div id="content">
+	    <canvas id="cnv" width="800px" height="800px"
+	            style="border:1px solid #000000;">
+	    </canvas>
+	    <div id = "allLvl">
+		    <div class="lvl" id="3.3">3.3</div>
+		    <div class="lvl" id="3.2">3.2</div>
+			<div class="lvl" id="3.1">3.1</div>
+		    <div class="lvl" id="2.3">2.3</div>
+		    <div class="lvl" id="2.2">2.2</div>
+		    <div class="lvl" id="2.1">2.1</div>
+		    <div class="lvl" id="1.3">1.3</div>
+		    <div class="lvl" id="1.2">1.2</div>
+		    <div class="lvl" id="1.1">1.1</div>	
+		    <span id="score"> Счет: 0 </span>
+		</div>
+	</div>
     <script src="script.js"></script>
 </body>
 </html>
